syntax = "proto3";

package yandex.cloud.priv.cloudrouter.v1.inner.service;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/cloudrouter/v1/inner/service;cloudrouter";
option java_outer_classname = "CRRI";

message RoutingInstance {
    string id = 1;
    string name = 2;
    string description = 3;
    string cloud_id = 4;
    string folder_id = 5;
    string region_id = 6;

    repeated VpcInfo vpc_info = 7;
    repeated CicPrivateConnectionInfo cic_private_connection_info = 8;

    message CicPrivateConnectionInfo {
        string cic_private_connection_id = 1;
    }

    message VpcInfo {
        string vpc_network_id = 1;
        oneof optional_shard_id {
            string shard_id = 2;
        }
        repeated VpcAzInfo az_infos = 3;
    }

    message VpcAzInfo {
        oneof az_info {
            VpcManualInfo manual_info = 2;
            /* VpcSubnetInfo subnet_info = 3; */
            /* future RouteTable data */
        }
    }

    message VpcManualInfo {
        string az_id = 1;
        bool az_anycast = 2;
        int64 med = 3;
        repeated string prefixes = 4;
    }

    message VpcSubnetInfo {
        string subnet_id = 1;
    }

    enum PeerType {
        PEER_TYPE_UNSPECIFIED = 0;
        VPC = 1;
        CIC_PRIVATE_CONNECTION = 2;
        /* CLOUD_ROUTER = 3; */
        /* VPC_ROUTING_TABLE = 5;*/
    }
}
